
[workspace]
resolver = "3"
members = [
    "ardeck",
    "ardeck_derive"
]

[workspace.dependencies]
log = "0.4.29"
syn = "2.0.114"
quote = "1.0.40"
proc-macro2 = "1.0.106"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.43"
thiserror = "2"
