[package]
name = "ardeck_derive"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "ardeck_derive"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
ardeck = { path = "../ardeck", features = ["all"] }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
